map z-index fixed

--- a/css/style.css
+++ b/css/style.css
@@ -389,6 +389,7 @@ h1 {
     height: 360px;
     border-radius: 15px;
     box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.05);
+    z-index: 0;
 }
 
 @media (max-width: 1200px) {
